@@ -1,1 +1,0 @@
-Fatal error: exception File "typing/signature_group.ml", line 52, characters 19-25: Assertion failed
