@@ -1,5 +1,4 @@
 (* TEST
-ocamlc_byte_exit_status = "2"
 * setup-ocamlc.byte-build-env
 ** ocamlc.byte
 *** check-ocamlc.byte-output
